src/tests/components-tests/vet.test.js
// import React from 'react';
// import { expect } from 'chai';
// import { shallow, mount } from 'enzyme';

// import { Vet } from '../../components/vet';

// describe('<Vet />', () => {
//     it('Renders without crashing', () => {
//         shallow( <Vet /> );
//     });

//     // it("contains spec with an expectation", () => {
//     //     expect(shallow( <LoginPage /> ).is('.navbar')).to.equal(true);
//     // });
// });

// TypeError: Cannot read property 'services' of undefined
//       at Vet.render (src/components/vet.js:22:26)